// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Federation converts a Supergraph to a Fusiongraph 1`] = `
"schema @transport(subgraph: "accounts", kind: "http", location: "http://accounts:4001/graphql") @transport(subgraph: "inventory", kind: "http", location: "http://inventory:4002/graphql") @transport(subgraph: "products", kind: "http", location: "http://products:4003/graphql") @transport(subgraph: "reviews", kind: "http", location: "http://reviews:4004/graphql") {
  query: Query
}

type Product @source(name: "Product", subgraph: "inventory") @source(name: "Product", subgraph: "products") @source(name: "Product", subgraph: "reviews") @variable(name: "Product_key_upc", select: "upc", subgraph: "inventory", type: "String") @variable(name: "Product_key_upc", select: "upc", subgraph: "products", type: "String") @variable(name: "Product_key_upc", select: "upc", subgraph: "reviews", type: "String") @variable(name: "representations", subgraph: "inventory", value: "{ __typename: \\"Product\\", upc: $Product_key_upc, price: $Product_shippingEstimate_requires_price, weight: $Product_shippingEstimate_requires_weight }") @variable(name: "representations", subgraph: "products", value: "{ __typename: \\"Product\\", upc: $Product_key_upc }") @variable(name: "representations", subgraph: "reviews", value: "{ __typename: \\"Product\\", upc: $Product_key_upc }") @resolver(operation: "query getProduct($representations: [_Any!]!) { _entities(representations: $representations) { ... on Product { ...__export } } }", subgraph: "inventory") @resolver(operation: "query getProduct($representations: [_Any!]!) { _entities(representations: $representations) { ... on Product { ...__export } } }", subgraph: "products") @resolver(operation: "query getProduct($representations: [_Any!]!) { _entities(representations: $representations) { ... on Product { ...__export } } }", subgraph: "reviews") {
  upc: String! @source(subgraph: "inventory", name: "upc") @source(subgraph: "products", name: "upc") @source(subgraph: "reviews", name: "upc")
  weight: Int @source(subgraph: "products", name: "weight")
  price: Int @source(subgraph: "products", name: "price")
  inStock: Boolean @source(subgraph: "inventory", name: "inStock")
  shippingEstimate: Int @source(subgraph: "inventory", name: "shippingEstimate") @variable(name: "Product_shippingEstimate_requires_price", select: "price", subgraph: "products", type: "Int") @variable(name: "Product_shippingEstimate_requires_weight", select: "weight", subgraph: "products", type: "Int")
  name: String @source(subgraph: "products", name: "name")
  reviews: [Review] @source(subgraph: "reviews", name: "reviews")
}

type Query @source(name: "Query", subgraph: "accounts") @source(name: "Query", subgraph: "inventory") @source(name: "Query", subgraph: "products") @source(name: "Query", subgraph: "reviews") {
  me: User @source(subgraph: "accounts", name: "me") @resolver(subgraph: "accounts", operation: "query me { me }")
  users: [User] @source(subgraph: "accounts", name: "users") @resolver(subgraph: "accounts", operation: "query users { users }")
  topProducts(first: Int): [Product] @source(subgraph: "products", name: "topProducts") @resolver(subgraph: "products", operation: "query topProducts($first: Int) { topProducts(first: $first) }")
}

type Review @source(name: "Review", subgraph: "reviews") @variable(name: "Review_key_id", select: "id", subgraph: "reviews", type: "ID") @variable(name: "representations", subgraph: "reviews", value: "{ __typename: \\"Review\\", id: $Review_key_id }") @resolver(operation: "query getReview($representations: [_Any!]!) { _entities(representations: $representations) { ... on Review { ...__export } } }", subgraph: "reviews") {
  id: ID! @source(subgraph: "reviews", name: "id")
  body: String @source(subgraph: "reviews", name: "body")
  product: Product @source(subgraph: "reviews", name: "product")
  author: User @source(subgraph: "reviews", name: "author")
}

type User @source(name: "User", subgraph: "accounts") @source(name: "User", subgraph: "reviews") @variable(name: "User_key_id", select: "id", subgraph: "accounts", type: "ID") @variable(name: "User_key_id", select: "id", subgraph: "reviews", type: "ID") @variable(name: "representations", subgraph: "accounts", value: "{ __typename: \\"User\\", id: $User_key_id }") @variable(name: "representations", subgraph: "reviews", value: "{ __typename: \\"User\\", id: $User_key_id }") @resolver(operation: "query getUser($representations: [_Any!]!) { _entities(representations: $representations) { ... on User { ...__export } } }", subgraph: "accounts") @resolver(operation: "query getUser($representations: [_Any!]!) { _entities(representations: $representations) { ... on User { ...__export } } }", subgraph: "reviews") {
  id: ID! @source(subgraph: "accounts", name: "id") @source(subgraph: "reviews", name: "id")
  name: String @source(subgraph: "accounts", name: "name")
  username: String @source(subgraph: "accounts", name: "username")
  birthDate: String @source(subgraph: "accounts", name: "birthDate")
  numberOfReviews: Int @source(subgraph: "reviews", name: "numberOfReviews")
  reviews: [Review] @source(subgraph: "reviews", name: "reviews")
}"
`;

exports[`Federation execution executes \`topProducts\` query 1`] = `
{
  "data": {
    "topProducts": [
      {
        "inStock": true,
        "name": "Table",
        "price": 899,
        "reviews": [
          {
            "author": {
              "id": "1",
              "name": "Ada Lovelace",
              "username": "@ada",
            },
            "body": "Love it!",
            "id": "1",
          },
          {
            "author": {
              "id": "2",
              "name": "Alan Turing",
              "username": "@complete",
            },
            "body": "Prefer something else.",
            "id": "4",
          },
        ],
        "shippingEstimate": 50,
        "upc": "1",
        "weight": 100,
      },
      {
        "inStock": false,
        "name": "Couch",
        "price": 1299,
        "reviews": [
          {
            "author": {
              "id": "1",
              "name": "Ada Lovelace",
              "username": "@ada",
            },
            "body": "Too expensive.",
            "id": "2",
          },
        ],
        "shippingEstimate": 0,
        "upc": "2",
        "weight": 1000,
      },
      {
        "inStock": true,
        "name": "Chair",
        "price": 54,
        "reviews": [
          {
            "author": {
              "id": "2",
              "name": "Alan Turing",
              "username": "@complete",
            },
            "body": "Could be better.",
            "id": "3",
          },
        ],
        "shippingEstimate": 25,
        "upc": "3",
        "weight": 50,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
}
`;

exports[`Federation execution executes \`users\` query 1`] = `
{
  "data": {
    "users": [
      {
        "id": "1",
        "name": "Ada Lovelace",
        "reviews": [
          {
            "body": "Love it!",
            "id": "1",
            "product": {
              "inStock": true,
              "name": "Table",
              "price": 899,
              "reviews": [
                {
                  "author": {
                    "id": "1",
                    "name": "Ada Lovelace",
                    "reviews": [
                      {
                        "body": "Love it!",
                        "id": "1",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                      {
                        "body": "Too expensive.",
                        "id": "2",
                        "product": {
                          "inStock": false,
                          "name": "Couch",
                          "price": 1299,
                          "shippingEstimate": 0,
                          "upc": "2",
                          "weight": 1000,
                        },
                      },
                    ],
                    "username": "@ada",
                  },
                  "body": "Love it!",
                  "id": "1",
                },
                {
                  "author": {
                    "id": "2",
                    "name": "Alan Turing",
                    "reviews": [
                      {
                        "body": "Could be better.",
                        "id": "3",
                        "product": {
                          "inStock": true,
                          "name": "Chair",
                          "price": 54,
                          "shippingEstimate": 25,
                          "upc": "3",
                          "weight": 50,
                        },
                      },
                      {
                        "body": "Prefer something else.",
                        "id": "4",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                    ],
                    "username": "@complete",
                  },
                  "body": "Prefer something else.",
                  "id": "4",
                },
              ],
              "shippingEstimate": 50,
              "upc": "1",
              "weight": 100,
            },
          },
          {
            "body": "Too expensive.",
            "id": "2",
            "product": {
              "inStock": false,
              "name": "Couch",
              "price": 1299,
              "reviews": [
                {
                  "author": {
                    "id": "1",
                    "name": "Ada Lovelace",
                    "reviews": [
                      {
                        "body": "Love it!",
                        "id": "1",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                      {
                        "body": "Too expensive.",
                        "id": "2",
                        "product": {
                          "inStock": false,
                          "name": "Couch",
                          "price": 1299,
                          "shippingEstimate": 0,
                          "upc": "2",
                          "weight": 1000,
                        },
                      },
                    ],
                    "username": "@ada",
                  },
                  "body": "Too expensive.",
                  "id": "2",
                },
              ],
              "shippingEstimate": 0,
              "upc": "2",
              "weight": 1000,
            },
          },
        ],
        "username": "@ada",
      },
      {
        "id": "2",
        "name": "Alan Turing",
        "reviews": [
          {
            "body": "Could be better.",
            "id": "3",
            "product": {
              "inStock": true,
              "name": "Chair",
              "price": 54,
              "reviews": [
                {
                  "author": {
                    "id": "2",
                    "name": "Alan Turing",
                    "reviews": [
                      {
                        "body": "Could be better.",
                        "id": "3",
                        "product": {
                          "inStock": true,
                          "name": "Chair",
                          "price": 54,
                          "shippingEstimate": 25,
                          "upc": "3",
                          "weight": 50,
                        },
                      },
                      {
                        "body": "Prefer something else.",
                        "id": "4",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                    ],
                    "username": "@complete",
                  },
                  "body": "Could be better.",
                  "id": "3",
                },
              ],
              "shippingEstimate": 25,
              "upc": "3",
              "weight": 50,
            },
          },
          {
            "body": "Prefer something else.",
            "id": "4",
            "product": {
              "inStock": true,
              "name": "Table",
              "price": 899,
              "reviews": [
                {
                  "author": {
                    "id": "1",
                    "name": "Ada Lovelace",
                    "reviews": [
                      {
                        "body": "Love it!",
                        "id": "1",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                      {
                        "body": "Too expensive.",
                        "id": "2",
                        "product": {
                          "inStock": false,
                          "name": "Couch",
                          "price": 1299,
                          "shippingEstimate": 0,
                          "upc": "2",
                          "weight": 1000,
                        },
                      },
                    ],
                    "username": "@ada",
                  },
                  "body": "Love it!",
                  "id": "1",
                },
                {
                  "author": {
                    "id": "2",
                    "name": "Alan Turing",
                    "reviews": [
                      {
                        "body": "Could be better.",
                        "id": "3",
                        "product": {
                          "inStock": true,
                          "name": "Chair",
                          "price": 54,
                          "shippingEstimate": 25,
                          "upc": "3",
                          "weight": 50,
                        },
                      },
                      {
                        "body": "Prefer something else.",
                        "id": "4",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                    ],
                    "username": "@complete",
                  },
                  "body": "Prefer something else.",
                  "id": "4",
                },
              ],
              "shippingEstimate": 50,
              "upc": "1",
              "weight": 100,
            },
          },
        ],
        "username": "@complete",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
}
`;

exports[`Federation plans \`topProducts\` query 1`] = `
{
  "resolverDependencyFieldMap": {
    "topProducts": [
      {
        "id": 0,
        "resolverDependencies": [
          {
            "id": 1,
            "resolverOperationDocument": "query getProduct($__variable_1: String!, $__variable_2: Int!, $__variable_3: Int!) {
  __export: _entities(
    representations: {__typename: "Product", upc: $__variable_1, price: $__variable_2, weight: $__variable_3}
  ) {
    ... on Product {
      inStock
      shippingEstimate
    }
  }
}",
            "subgraph": "inventory",
          },
          {
            "id": 2,
            "resolverDependencyFieldMap": {
              "reviews.author": [
                {
                  "id": 3,
                  "resolverOperationDocument": "query getUser($__variable_5: ID!) {
  __export: _entities(representations: {__typename: "User", id: $__variable_5}) {
    ... on User {
      username
      name
    }
  }
}",
                  "subgraph": "accounts",
                },
              ],
            },
            "resolverOperationDocument": "query getProduct($__variable_4: String!) {
  __export: _entities(
    representations: {__typename: "Product", upc: $__variable_4, price: null, weight: null}
  ) {
    ... on Product {
      reviews {
        id
        body
        author {
          id
          __variable_5: id
        }
      }
    }
  }
}",
            "subgraph": "reviews",
          },
        ],
        "resolverOperationDocument": "query topProducts($__variable_0: Int) {
  __export: topProducts(first: $__variable_0) {
    name
    price
    upc
    weight
    __variable_1: upc
    __variable_2: price
    __variable_3: weight
    __variable_4: upc
  }
}",
        "subgraph": "products",
      },
    ],
  },
  "resolverOperationNodes": [],
}
`;

exports[`Federation plans \`users\` query 1`] = `
{
  "resolverDependencyFieldMap": {
    "users": [
      {
        "id": 0,
        "resolverDependencies": [
          {
            "id": 1,
            "resolverDependencyFieldMap": {
              "reviews.product": [
                {
                  "id": 2,
                  "resolverOperationDocument": "query getProduct($__variable_8: String!, $__variable_9: Int!, $__variable_10: Int!) {
  __export: _entities(
    representations: {__typename: "Product", upc: $__variable_8, price: $__variable_9, weight: $__variable_10}
  ) {
    ... on Product {
      inStock
      shippingEstimate
    }
  }
}",
                  "resolverPreDependencies": [
                    {
                      "id": 3,
                      "resolverOperationDocument": "query getProduct($__variable_11: String!) {
  __export: _entities(
    representations: {__typename: "Product", upc: $__variable_11, price: null, weight: null}
  ) {
    ... on Product {
      __variable_9: price
    }
  }
}",
                      "subgraph": "products",
                    },
                    {
                      "id": 4,
                      "resolverOperationDocument": "query getProduct($__variable_12: String!) {
  __export: _entities(
    representations: {__typename: "Product", upc: $__variable_12, price: null, weight: null}
  ) {
    ... on Product {
      __variable_10: weight
    }
  }
}",
                      "subgraph": "products",
                    },
                  ],
                  "subgraph": "inventory",
                },
                {
                  "id": 3,
                  "resolverOperationDocument": "query getProduct($__variable_13: String!) {
  __export: _entities(
    representations: {__typename: "Product", upc: $__variable_13, price: null, weight: null}
  ) {
    ... on Product {
      name
      price
      weight
    }
  }
}",
                  "subgraph": "products",
                },
              ],
              "reviews.product.reviews.author": [
                {
                  "id": 4,
                  "resolverOperationDocument": "query getUser($__variable_7: ID!) {
  __export: _entities(representations: {__typename: "User", id: $__variable_7}) {
    ... on User {
      username
      name
    }
  }
}",
                  "subgraph": "accounts",
                },
              ],
              "reviews.product.reviews.author.reviews.product": [
                {
                  "id": 5,
                  "resolverOperationDocument": "query getProduct($__variable_1: String!, $__variable_2: Int!, $__variable_3: Int!) {
  __export: _entities(
    representations: {__typename: "Product", upc: $__variable_1, price: $__variable_2, weight: $__variable_3}
  ) {
    ... on Product {
      inStock
      shippingEstimate
    }
  }
}",
                  "resolverPreDependencies": [
                    {
                      "id": 6,
                      "resolverOperationDocument": "query getProduct($__variable_4: String!) {
  __export: _entities(
    representations: {__typename: "Product", upc: $__variable_4, price: null, weight: null}
  ) {
    ... on Product {
      __variable_2: price
    }
  }
}",
                      "subgraph": "products",
                    },
                    {
                      "id": 7,
                      "resolverOperationDocument": "query getProduct($__variable_5: String!) {
  __export: _entities(
    representations: {__typename: "Product", upc: $__variable_5, price: null, weight: null}
  ) {
    ... on Product {
      __variable_3: weight
    }
  }
}",
                      "subgraph": "products",
                    },
                  ],
                  "subgraph": "inventory",
                },
                {
                  "id": 6,
                  "resolverOperationDocument": "query getProduct($__variable_6: String!) {
  __export: _entities(
    representations: {__typename: "Product", upc: $__variable_6, price: null, weight: null}
  ) {
    ... on Product {
      name
      price
      weight
    }
  }
}",
                  "subgraph": "products",
                },
              ],
            },
            "resolverOperationDocument": "query getUser($__variable_0: ID!) {
  __export: _entities(representations: {__typename: "User", id: $__variable_0}) {
    ... on User {
      reviews {
        id
        body
        product {
          upc
          reviews {
            id
            body
            author {
              id
              reviews {
                id
                body
                product {
                  upc
                  __variable_1: upc
                  __variable_4: upc
                  __variable_5: upc
                  __variable_6: upc
                }
              }
              __variable_7: id
            }
          }
          __variable_8: upc
          __variable_11: upc
          __variable_12: upc
          __variable_13: upc
        }
      }
    }
  }
}",
            "subgraph": "reviews",
          },
        ],
        "resolverOperationDocument": "query users {
  __export: users {
    id
    username
    name
    __variable_0: id
  }
}",
        "subgraph": "accounts",
      },
    ],
  },
  "resolverOperationNodes": [],
}
`;
